Added Maven release plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>11</java.version>
 		<lombok.version>1.18.22</lombok.version>
 	</properties>
+
+	<scm>
+		<developerConnection>scm:git:https://github.com/000407/HFK2161SE-jpa-demo/</developerConnection>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -60,6 +65,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+					<tagBase>https://github.com/000407/HFK2161SE-jpa-demo/releases</tagBase>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
